manifests/dozzle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dozzle
  namespace: monitoring
spec:
  selector:
    app: dozzle
  ports:
    - name: http
      port: 8080
      targetPort: http
